apps/liverpc-docs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liverpc-docs
  namespace: liverpc-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: liverpc-docs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: liverpc-docs
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: liverpc-docs
          image: ghcr.io/jvz-devx/liverpc-docs:0.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 768Mi
