apps/liverpc-docs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: liverpc-docs
  namespace: liverpc-docs
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: liverpc-docs-homelab
spec:
  selector:
    app.kubernetes.io/name: liverpc-docs
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
